APPPOCTOOL-78 - remove dependency for open feign